api-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-api
  namespace: redis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-api
  template:
    metadata:
      labels:
        app: redis-api
    spec:
      containers:
        - name: redis-api
          image: emretocan/redis-api:v6
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: redis-api-service
  namespace: redis
spec:
  selector:
    app: redis-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
