redis-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-api-ingress
  namespace: redis
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: redis-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-api-service
            port:
              number: 80
